...
    <string name="password_hint">"请输入密码"</string>
    <string name="login">"登录"</string>
    <string name="register_link">"用户注册"</string>
    <string name="forget_link">"忘记密码"</string>
    <string name="register_account_hint">"请输入邮箱"</string>
    <string name="register_verification">"验证码"</string>
    <string name="register_password">"请输入6-12位密码"</string>
    <string name="register_confirm_password">"确认密码"</string>
    <string name="register_sms_hint">"获取验证码"</string>
    <string name="register_hint">"注册"</string>
    <string name="reset_pwd_confirm">"确定"</string>
    <string name="titleBar_search_hint">请输入课程或老师名称</string>
    <string name="title_activity_home">HomeActivity</string>
...
